# Group21AirportDelayAnalyzer

./: .gitignore  CMakeLists.txt  README.md
include/: compare.h  csv_parser.h  data_aggregator.h  data_generator.h  heap_sort.h  menu.h  merge_sort.h  quick_sort.h  sfml_menu.h
src/: compare.cpp  csv_parser.cpp  data_aggregator.cpp  data_generator.cpp  heap_sort.cpp  main.cpp  menu.cpp  merge_sort.cpp  quick_sort.cpp  sfml_menu.cpp
